--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -12,7 +12,7 @@
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#e06460">
 		%svelte.head%
 	</head>
-	<body>
-		<main id="svelte">%svelte.body%</main>
+	<body id="svelte">
+		%svelte.body%
 	</body>
 </html>
