Add svelte frontend with tailwind and i18n

--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -4,15 +4,10 @@
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
 		<link rel="icon" href="/favicon.png" />
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-		<meta name="format-detection" content="telephone=no">
-		<meta name="theme-color" media="(prefers-color-scheme: light)" content="#fceaec">
-    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#e06460">
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
-	<body id="svelte">
-		%svelte.body%
+	<body>
+		<div id="svelte">%svelte.body%</div>
 	</body>
 </html>
